--- a/.github/workflows/update-md-date.yml
+++ b/.github/workflows/update-md-date.yml
@@ -47,12 +47,12 @@ jobs:
           # Ensure we're on the correct branch
           git switch -c "$PR_BRANCH" || git switch "$PR_BRANCH"
           
-          # Stage and commit changes if any
+          # Stage and commit all changes (new, modified, deleted)
           git add -A
           git diff --staged --quiet || git commit -m "Update last modified date in Markdown files"
           
-          # Pull and merge existing changes
+          # Pull and merge existing changes from remote
           git pull origin "$PR_BRANCH" --no-rebase
           
-          # Push all changes
+          # Push all changes to the PR branch
           git push origin "$PR_BRANCH"
