--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,11 +2,23 @@
 # The Python Worker is managed by Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
-azure-functions
-azure-ai-formrecognizer
-azure-core
-azure-cosmos==4.3.0
-azure-identity==1.7.0
-Pillow==10.0.1
-pdf2image==1.16.3
-requests==2.31.0
+# Core Azure Functions dependencies
+azure-functions>=1.18.0,<2.0.0
+
+# Azure AI and Document Processing - Essential
+azure-ai-formrecognizer>=3.3.0,<4.0.0
+azure-core>=1.29.0,<2.0.0
+azure-cosmos>=4.3.0,<5.0.0
+azure-identity>=1.15.0,<2.0.0
+
+# HTTP requests - Essential
+requests>=2.31.0,<3.0.0
+
+# Image Processing
+Pillow>=10.0.1,<11.0.0
+
+# Azure OpenAI for LLM processing
+openai>=1.3.0,<2.0.0
+
+# Essential utilities
+python-dateutil>=2.8.0,<3.0.0
